adding framework for workshop 2, updating homepage, and creating past workshops tab

--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,7 @@
 anchor-sections: false
 section-divs: false
 css: assets/index.css
+toc: false
 ---
 
 ::: {.grid}
@@ -11,14 +12,9 @@ css: assets/index.css
 # Data Science for Biology Workshop Series
 :::
 
-::: {.g-col-10  .g-start-1}
-
-![Workshop 1: October 16th-20th 2023 at UKZN School of Medicine in Durban, SA](images/group_photo.png)
-:::
-
 ::: {.g-col-6}
-#### Workshop 1 - R, RStudio, and Quarto for clinical research
-This week of content will prepare you to use R, RStudio, and Quarto for data analysis in clinical research.
+#### Workshop II - Working with High Dimensional Data
+<!-- This week of content will prepare you to use R, RStudio, and Quarto for data analysis in clinical research. -->
 :::
 
 ::: {.g-col-6 .text-start}
@@ -30,44 +26,42 @@ This week of content will prepare you to use R, RStudio, and Quarto for data ana
 
 :::
 
-## Thank you for participating in the workshop!
-
-Our week together was amazing, thank you so much for making the workshop a success by participating all week long.
-
-1. If you haven't already, [please fill out this survey](https://docs.google.com/forms/d/e/1FAIpQLSffVuXEzVfK8xb0vzA-WGyBzhnJ3fvpJ_HflAVRum4mHuXQCg/viewform)
-2. If you have any photos of the workshop you'd like to share, go to [#photos on the workshop discord](https://discord.com/channels/1158136582201692202/1164886636878889071)
-3. Please post on Discord or email us if you have any questions or comments!
-
 ## Welcome to the workshop!
 
 1. [Fill out the pre-workshop survey here](https://forms.gle/7sdT7YRJerdgFJcc7)  
 2. [Fill out the icebreaker survey here](https://forms.gle/6FAJ5Qa78qUkwvdu8)  
 3. [Join the discord here](https://discord.gg/UDAsYTzZE) (once you've joined, you can bookmark [https://discord.com/channels/1158136582201692202/](https://discord.com/channels/1158136582201692202/) to go straight to the channel.)  
-4. Get your RStudio and R installation checked by an instructor or TA
+4. Get the AWS instance running and open RStudio
 
-## Before the workshop: Installing R and RStudio
+## Before the workshop: Logging onto the AWS instance
 
-Please install R and RStudio on your laptop. If you already have R and Rstudio installed, please make sure they are up-to date. Please install `R version 4.3.1` and `RStudio version 2023.09.0` [Click here for instructions on installing R and RStudio](installation-instructions.qmd)
+Please install..
+
+<!-- Please install R and RStudio on your laptop. If you already have R and Rstudio installed, please make sure they are up-to date. Please install `R version 4.3.1` and `RStudio version 2023.09.0` [Click here for instructions on installing R and RStudio](installation-instructions.qmd) -->
 
 
 | Date/Time  | Topic  | Instructor|
 |--------|--------|--------|
-| **Monday, October 16^th^**  | --|-- |
-| AM   | Course Introduction & Introduction to data types | Salina Hussain and Suuba Demby (Ragon Institute)|
-| PM | Intro to R, Rstudio, and Quarto  | Chandani Desai and Joseph Elsherbini (Ragon Institute) |
-| **Tuesday, October 17^th^**  |-- |-- |
-| AM   | Intro to data visualizaion with the <code>tidyverse</code> | Scott Handley (Wash U School of Medicine)|
-| PM | Data wrangling and more data visualization | Joseph Elsherbini  (Ragon Institute) |
-| **Wednesday, October 18^th^**  |-- | --|
-| AM   | <code>tableone</code> and statistics for clinical data  | Marothi Letsoalo (CAPRISA)|
-| PM | Small group worktime  | Participants |
-| **Thursday, October 19^th^**  |-- | --|
-| AM   | Hypothesis testing and data transformations | Laura Symul (UCLouvain)|
-| PM | Small group worktime  | Participants |
+| **Monday, April 22^nd^**  | | |
+| AM   | Course Introduction | Scott Handley (Wash U School of Medicine)|
+|    | Keynote | Jacques Ravel |
+|  | Microbiome Sample Processing and Library prep  | Lindsay |
+| PM   | R Refresher (<code> tidyverse</code> /summary tables/data visualization) | Scott Handley (Wash U School of Medicine)|
+| **Tuesday, April 23^th^**  |____________________________________________ |____________________________________________ |
+| AM   | 16S Data Preprocessing| Asavela|
+| PM | 16S Data Analysis pt. 1 | Elizabeth Costello |
+| **Wednesday, April 24^th^**  |____________________________________________ | ____________________________________________|
+| AM   | Group Activity session I  | Johnathan Shih |
+ PM | 16S Data Analysis pt. 1 | Joseph Elsherbini |
+| **Thursday, April 25^th^**  |____________________________________________ | ____________________________________________|
+| AM   | VIRGO / Shotgun Metagenomics | Michael France|
+| PM   | Group Activity session II  | Johnathan Shih |
 |Evening|Reception||
-| **Friday, October 20^th^**  |-- | --|
-| AM   | Keynote | Lenine Liebenberg (CERI Stellenbosch)|  
-| | Small group work time | Participants |  
-| PM | Small group presentations | |Small group work time | Participants |
-: Schedule {#tbl-1 .table-bordered .table-sm}
-
+| **Friday, April 26^th^**  |____________________________________________ | ____________________________________________|
+| AM   | Keynote | Sinaye Ngcapu (CERI Stellenbosch)|  
+| | Group Activity review |  |  
+| PM | Group Presentations | Participants |
+|  | Dataset Demo |  |
+|  | Workshop Outro | Scott Handley |
+| |____________________________________________ |____________________________________________ |
+: <b>Schedule</b> {#tbl-1 .table-bordered .table-sm}
