--- a/index.qmd
+++ b/index.qmd
@@ -29,9 +29,8 @@ toc: false
 ## Welcome to the workshop!
 
 1. [Fill out the pre-workshop survey here](https://forms.gle/7sdT7YRJerdgFJcc7)  
-2. [Fill out the icebreaker survey here](https://forms.gle/6FAJ5Qa78qUkwvdu8)  
-3. [Join the discord here](https://discord.gg/UDAsYTzZE) (once you've joined, you can bookmark [https://discord.com/channels/1158136582201692202/](https://discord.com/channels/1158136582201692202/) to go straight to the channel.)  
-4. Get the AWS instance running and open RStudio
+2. [Join the discord here](https://discord.gg/Mb7pRTptqm) (once you've joined, you can bookmark [https://discord.com/channels/1158136582201692202/](https://discord.com/channels/1227264067899621427) to go straight to the channel.)  
+3. Get the AWS instance running and open RStudio
 
 ## Before the workshop: Logging onto the AWS instance
 
