--- a/materials/2-workshop2/8-group-project/index.qmd
+++ b/materials/2-workshop2/8-group-project/index.qmd
@@ -1,33 +1,149 @@
 ---
-title: "Group Project"
+title: "Group Activity"
 format:
   html:
     toc: true
 ---
 
-For this group activity, the Group A will be analyzing the yogurt dataset and Group B will be analyzing the menstruation dataset.
+Group A will be analyzing the yogurt dataset and Group B will be analyzing the menstruation dataset.
 
 
-:::{.callout-note}
+<!-- :::{.callout-Group_A}
 
-test content  
+<b>Study Description</b>  
 
-:::
+::: -->
 
+### Projects
 
-:::{.solutionbox}
+<!-- :::{.callout-note title="Research Project A - Does yogurt consumption change the vaginal microbiome?" appearance="simple"}
+\
+**Aim**\
+To investigate whether the consumption of yogurt influences microbiome composition after antibiotics treatment.\
+\
+**Study Description** \
+This is a randomized controlled trial to study whether yogurt consumption has an effect on the microbiome post antibiotic treatment. Absolute abundance of bacteria (in gene copies / mL) was measured by 3 qPCR assays (for total, L. crispatus, L. iners). Cytokine levels (in ug/mL of vaginal fluid) were also measured by Luminex. We also looked at the number and type of immune cells in the vagina using Flow Cytometry. Data was collected at two timepoints, pre and post antibiotic treatment. (add 16s)
+\
+ 
+::: -->
 
-::::{.solutionbox-header}
-:::::{.solutionbox-icon}
-:::::
-test
+:::{.block}
+::::{.block-header} 
+Research Project A - Does yogurt consumption change the vaginal microbiome?
 ::::
-
-::::{.solutionbox-body}
-content
+::::{.block-container id="group_a"}
+**Aim**\
+To investigate whether the consumption of yogurt influences microbiome composition after antibiotics treatment.\
+\
+**Study Description** \
+This is a randomized controlled trial to study whether yogurt consumption has an effect on the microbiome post antibiotic treatment. Absolute abundance of bacteria (in gene copies / mL) was measured by 3 qPCR assays (for total, L. crispatus, L. iners). Cytokine levels (in ug/mL of vaginal fluid) were also measured by Luminex. We also looked at the number and type of immune cells in the vagina using Flow Cytometry. Data was collected at two timepoints, pre and post antibiotic treatment. (add 16s)
+\
 ::::
-
 :::
+<script> 
+  // Add click event listener to the block header
+  document.getElementById("group_a").addEventListener("click", function() {
+    window.location.href = "group_a.html";
+  });
+</script>
+
+
+
+
+:::{.block}
+::::{.block-header}
+Research Project B - Does birth control change inflammation during menstruation?
+::::
+::::{.block-container id="group_b"}
+**Aim**\
+To investigate whether taking birth control is associated with vaginal inflammation throughout the menstrual cycle.\
+\
+**Study Description** \
+This is an observational study to evaluate the relationship between birth control and vaginal inflammation In response to menstruation. Absolute abundance of bacteria was measured by 3 qPCR assays (for total Bacteria, L. crispatus, L. iners). Cytokine levels (in ug/mL of vaginal fluid) were also measured by Luminex. We also looked at the number and type of immune cells in the vagina using Flow Cytometry. Data was collected at four timepoints; before, at the start, the end, and after menstruation. (add 16s)
+\
+::::
+:::
+<script> 
+  // Add click event listener to the block header
+  document.getElementById("group_b").addEventListener("click", function() {
+    window.location.href = "group_b.html";
+  });
+</script>
+
+
+<!-- :::{.goals}
+::::{.goals-header}
+Learning Goals
+::::
+::::{.goals-container}
+* Know how to make your own callouts.
+* Be able to mess with some SCSS/CSS styling.
+::::
+::: -->
 
 
 <!-- {{< group_projects.qmd >}} -->
+
+
+
+### Schedule (! To be updated with lecture slide points)
+**Wednesday (4/24)**
+
++----------------+-----------------------------------------------------------------------------------+
+| Time           | Task                                                                              |
++================+===================================================================================+
+| 9:00-9:30am    |- Read project description and aims for your project                               |
+|                |- Locate project files on your instance                                            |
+|                |- Create a new .qmd file                                                           |
++----------------+-----------------------------------------------------------------------------------+
+| 9:30 - 10:30am |- **Explore the data!**                                                            |
+|                |- Begin sample inference with Dada2                                                |
++----------------+-----------------------------------------------------------------------------------+
+|10:30 - 11:00am | **Break**                                                                         |
++----------------+-----------------------------------------------------------------------------------+
+|11:00- 12:00pm  |- Merge in metadata, qPCR, and Luminex data                                        |
+|                |- Create a phyloseq object                                                         |
++----------------+-----------------------------------------------------------------------------------+
+
+
+**Thursday (4/25)**
+
++----------------+-------------------------------------------------------------------------------------+
+| Time           | Task                                                                                |
++================+=====================================================================================+
+| 1:30 - 2:00pm  |- Phyloseq processing and visualizations                                             |
++----------------+-------------------------------------------------------------------------------------+
+| 2:00 - 3:00pm  |- Differential abundance testing                                                     |
+|                |- Running shotgun metagenomics and integrating into phyloseq                         |
++----------------+-------------------------------------------------------------------------------------+
+|3:00 - 3:30pm   | **Break**                                                                           |
++----------------+-------------------------------------------------------------------------------------+
+|3:30 - 5:00pm   |- etc                                                                                |
++----------------+-------------------------------------------------------------------------------------+
+
+### Example workflows
+[Johnathan's Demo (temporary test)](johnathan_yogurt_demo.rmd)
+
+
+
+<!-- ::: {#tbl-panel layout-ncol=2}
+| Col1 | Col2 | Col3 |
+|------|------|------|
+| A    | B    | C    |
+| E    | F    | G    |
+| A    | G    | G    |
+
+: First Table {#tbl-first}
+
+| Col1 | Col2 | Col3 |
+|------|------|------|
+| A    | B    | C    |
+| E    | F    | G    |
+| A    | G    | G    |
+
+: Second Table {#tbl-second}
+
+Wednesday Session Structure
+:::
+
+See @tbl-panel for details, especially @tbl-second. -->
