--- a/materials/2-workshop2/2-r-refresher/index.qmd
+++ b/materials/2-workshop2/2-r-refresher/index.qmd
@@ -5,3 +5,17 @@ format:
     toc: true
 ---
 
+
+> Let's do a refresher on R, RStudio and Quarto for data analysis.
+
+  
+## Slides: Intro to RStudio, Quarto, and R
+[Make slides full screen](slides.qmd)
+
+```{=html}
+<iframe class="slide-deck" src="slides.html" height="420" width="747" style="border: 1px solid #2e3846;"></iframe>
+```
+
+
+
+{{< include _exercise_Rrefresher.qmd >}}
