--- a/materials/1-workshop1/2-intro-to-r/slides.qmd
+++ b/materials/1-workshop1/2-intro-to-r/slides.qmd
@@ -293,7 +293,7 @@ Programming is giving the computer instructions using text. The tricky part is l
 ```{r error=TRUE}
 #| echo: fenced
 
-max(c(1,2,3,4)]
+max(c(1,2,3,4))
 ```
 :::
 :::{#column3 .fragment}
