--- a/about.qmd
+++ b/about.qmd
@@ -83,9 +83,10 @@ Centre for the AIDS Programme of Research in South Africa (CAPRISA) -  UKZN
 :::
 
 ::: {.g-col-4}
-[*Instructor*]{style="font-size: 0.8em"}
+[*Instructor*]{style="font-size: 0.8em"}\
 **Johnathan Shih**  
-Bioinformatics Research Technician  
+Bioinformatics \
+Research Technician  
 Ragon Institute of MGH, MIT and Harvard
 :::
 
@@ -149,7 +150,7 @@ Centre for the AIDS Programme of Research in South Africa (CAPRISA) - UKZN
 
 
 ::: {.g-col-2}
-
+![](images/Wasim.png){fig-align="left"}
 :::
 
 ::: {.g-col-4}
@@ -329,7 +330,7 @@ Centre for the AIDS Programme of Research in South Africa (CAPRISA) - UKZN
 
 
 ::: {.g-col-2}
-
+![](images/Wasim.png){fig-align="left"}
 :::
 
 ::: {.g-col-4}
